05-vpn.tf
# #Asia####################################################################################

# resource "google_compute_vpn_gateway" "asia_gateway" {
#   name    = "manningasia1-vpn-gateway"
#   network = google_compute_network.custom-vpc-tf-asia.id
#     region  = "asia-southeast1"
#     depends_on = [ google_compute_subnetwork.manningasia1 ]
# }


# resource "google_compute_address" "vpn_static_ip" {
#   name = "vpn-static-ip"
#   region = "asia-southeast1"
# }

# resource "google_compute_forwarding_rule" "fr_esp" {
#   name        = "fr-esp"
#   ip_protocol = "ESP"
#   ip_address  = google_compute_address.vpn_static_ip.address
#   target      = google_compute_vpn_gateway.asia_gateway.id
#     region = "asia-southeast1"


# }

# resource "google_compute_forwarding_rule" "fr_udp500" {
#   name        = "fr-udp500"
#   ip_protocol = "UDP"
#   port_range  = "500"
#   ip_address  = google_compute_address.vpn_static_ip.address
#   target      = google_compute_vpn_gateway.asia_gateway.id
#     region = "asia-southeast1"

# }

# resource "google_compute_forwarding_rule" "fr_udp4500" {
#   name        = "fr-udp4500"
#   ip_protocol = "UDP"
#   port_range  = "4500"
#   ip_address  = google_compute_address.vpn_static_ip.address
#   target      = google_compute_vpn_gateway.asia_gateway.id
#     region = "asia-southeast1"

# }

# resource "google_compute_vpn_tunnel" "manningasia1_vpn_tunnel" {
#   name          = "manningasia1-vpn-tunnel"
#   peer_ip       = google_compute_vpn_tunnel.manningeurope1_vpn_tunnel
#   shared_secret = sensitive("a secret message")
#     local_traffic_selector = ["192.168.88.0/24"]
#     remote_traffic_selector = ["10.88.2.0/24"]



#   target_vpn_gateway = google_compute_vpn_gateway.asia_gateway.self_link

#   depends_on = [
#     google_compute_forwarding_rule.fr_esp,
#     google_compute_forwarding_rule.fr_udp500,
#     google_compute_forwarding_rule.fr_udp4500,
#   ]
# }

# resource "google_compute_route" "asia_route" {
#   name       = "asia-route"
#   network    = google_compute_network.manningasiamain.self_link
#   dest_range = "10.88.2.0/24"
#   priority   = 1000

#   next_hop_vpn_tunnel = google_compute_vpn_tunnel.manningasia1_vpn_tunnel.id
# }

# #Europe####################################################################################

# resource "google_compute_vpn_gateway" "europe_gateway" {
#   name    = "manningeurope1-vpn-gateway"
#   network = google_compute_network.custom-vpc-tf-europe.id
#     region  = "europe-west1"
#     # depends_on = [ google_compute_subnetwork.manningeurope1 ]
# }


# resource "google_compute_address" "vpn_static_ip_2" {
#   name = "vpn-static-ip2"
#   region = "europe-west1"
# }

# resource "google_compute_forwarding_rule" "fr_esp2" {
#   name        = "fr-esp"
#   ip_protocol = "ESP"
#   ip_address  = google_compute_address.vpn_static_ip_2.address
#   target      = google_compute_vpn_gateway.europe_gateway.id
#     region = "europe-west1"


# }

# resource "google_compute_forwarding_rule" "fr_udp500_2" {
#   name        = "fr-udp500"
#   ip_protocol = "UDP"
#   port_range  = "500"
#   ip_address  = google_compute_address.vpn_static_ip_2.address
#   target      = google_compute_vpn_gateway.europe_gateway.id
#     region = "europe-west1"

# }

# resource "google_compute_forwarding_rule" "fr_udp4500_2" {
#   name        = "fr-udp4500"
#   ip_protocol = "UDP"
#   port_range  = "4500"
#   ip_address  = google_compute_address.vpn_static_ip_2.address
#   target      = google_compute_vpn_gateway.europe_gateway.id
#     region = "europe-west1"

# }

# resource "google_compute_vpn_tunnel" "manningeurope1_vpn_tunnel" {
#   name          = "manningeurope1-vpn-tunnel"
#   peer_ip       = google_compute_vpn_gateway.asia_gateway
#   shared_secret = sensitive("a secret message")
#     local_traffic_selector = ["10.88.2.0/24"]
#     remote_traffic_selector = ["192.168.88.0/24"]



#   target_vpn_gateway = google_compute_vpn_gateway.europe_gateway.self_link


#   depends_on = [
#     google_compute_forwarding_rule.fr_esp,
#     google_compute_forwarding_rule.fr_udp500,
#     google_compute_forwarding_rule.fr_udp4500,
#   ]
# }

# resource "google_compute_route" "europe_route" {
#   name       = "europe-route"
#   network    = google_compute_network.manningeurope1.self_link
#   dest_range = "192.168.88.0/24"
#   priority   = 1000

#   next_hop_vpn_tunnel = google_compute_vpn_tunnel.manningeurope1_vpn_tunnel.id
# }

# #Asia VPN Gateway
# resource "google_compute_vpn_gateway" "asia_gateway" {
#   name    = "manningasia1-vpn-gateway"
#   network = google_compute_network.custom-vpc-tf-asia.id
#   region  = "asia-southeast1"
# }

# resource "google_compute_address" "vpn_static_ip_asia" {
#   name   = "vpn-static-ip-asia"
#   region = "asia-southeast1"
# }

# # Forwarding Rules for Asia
# resource "google_compute_forwarding_rule" "fr_esp_asia" {
#   name        = "fr-esp-asia"
#   ip_protocol = "ESP"
#   ip_address  = google_compute_address.vpn_static_ip_asia.address
#   target      = google_compute_vpn_gateway.asia_gateway.self_link
#   region      = "asia-southeast1"
# }

# resource "google_compute_forwarding_rule" "fr_udp500" {
#   name        = "fr-udp500"
#   ip_protocol = "UDP"
#   port_range  = "500"
#   ip_address  = google_compute_address.vpn_static_ip.address
#   target      = google_compute_vpn_gateway.asia_gateway.id
#     region = "asia-southeast1"

# }

# resource "google_compute_forwarding_rule" "fr_udp4500" {
#   name        = "fr-udp4500"
#   ip_protocol = "UDP"
#   port_range  = "4500"
#   ip_address  = google_compute_address.vpn_static_ip.address
#   target      = google_compute_vpn_gateway.asia_gateway.id
#     region = "asia-southeast1"

# }



# # Europe VPN Gateway
# resource "google_compute_vpn_gateway" "europe_gateway" {
#   name    = "manningeurope1-vpn-gateway"
#   network = google_compute_network.custom-vpc-tf-europe.id
#   region  = "europe-west2"
# }

# resource "google_compute_address" "vpn_static_ip_europe" {
#   name   = "vpn-static-ip-europe"
#   region = "europe-west2"
# }

# # Forwarding Rules for Europe
# resource "google_compute_forwarding_rule" "fr_esp_europe" {
#   name        = "fr-esp-europe"
#   ip_protocol = "ESP"
#   ip_address  = google_compute_address.vpn_static_ip_europe.address
#   target      = google_compute_vpn_gateway.europe_gateway.self_link
#   region      = "europe-west2"
# }

# resource "google_compute_forwarding_rule" "fr_udp500_2" {
#   name        = "fr-udp500"
#   ip_protocol = "UDP"
#   port_range  = "500"
#   ip_address  = google_compute_address.vpn_static_ip_2.address
#   target      = google_compute_vpn_gateway.europe_gateway.id
#     region = "europe-west1"

# }

# resource "google_compute_forwarding_rule" "fr_udp4500_2" {
#   name        = "fr-udp4500"
#   ip_protocol = "UDP"
#   port_range  = "4500"
#   ip_address  = google_compute_address.vpn_static_ip_2.address
#   target      = google_compute_vpn_gateway.europe_gateway.id
#     region = "europe-west1"

# }




# # VPN Tunnels
# resource "google_compute_vpn_tunnel" "manningasia1_vpn_tunnel" {
#   name                  = "manningasia1-vpn-tunnel"
#   peer_ip               = google_compute_address.vpn_static_ip_europe.address  # Use the external IP of Europe VPN Gateway
#   shared_secret         = sensitive("a secret message")
#   local_traffic_selector  = ["192.168.88.0/24"]
#   remote_traffic_selector = ["10.88.2.0/24"]
#   target_vpn_gateway    = google_compute_vpn_gateway.asia_gateway.self_link
# }

# resource "google_compute_vpn_tunnel" "manningeurope1_vpn_tunnel" {
#   name                  = "manningeurope1-vpn-tunnel"
#   peer_ip               = google_compute_address.vpn_static_ip_asia.address  # Use the external IP of Asia VPN Gateway
#   shared_secret         = sensitive("a secret message")
#   local_traffic_selector  = ["10.88.2.0/24"]
#   remote_traffic_selector = ["192.168.88.0/24"]
#   target_vpn_gateway    = google_compute_vpn_gateway.europe_gateway.self_link
# }

# # Routes
# resource "google_compute_route" "asia_route" {
#   name       = "asia-route"
#   network    = google_compute_network.custom-vpc-tf-asia.self_link
#   dest_range = "10.88.2.0/24"
#   priority   = 1000
#   next_hop_vpn_tunnel = google_compute_vpn_tunnel.manningasia1_vpn_tunnel.id
# }

# resource "google_compute_route" "europe_route" {
#   name       = "europe-route"
#   network    = google_compute_network.custom-vpc-tf-europe.self_link
#   dest_range = "192.168.88.0/24"
#   priority   = 1000
#   next_hop_vpn_tunnel = google_compute_vpn_tunnel.manningeurope1_vpn_tunnel.id
# }
